99-Practice/01-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: development
  labels:
    name: development-label
