99-Practice/app2.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: app2
  # these labels are deployment related labels
  labels:
    app: app2
    purpose: ingress
spec:
  selector:
    matchLabels:
      app: app2
      purpose: ingress
  # pod definition
  template:
    metadata:
      labels:
        app: app2
        purpose: ingress
    spec:
      containers:
      - name: app2
        image: joindevops/app2:1.0
---
apiVersion: v1
kind: Service
metadata:
  name: app2
spec:
  selector:
    app: app2
    purpose: ingress
  ports:
  - protocol: TCP
    port: 80 #service-port
    targetPort: 80 #target-port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app2
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/tags: Environment=dev,Team=test
    alb.ingress.kubernetes.io/group.name: joindevops
spec:
  ingressClassName: alb
  rules:
  - host: "app2.kalyaneswar.site" # ALB Rule
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: app2 # ALB Target group
            port:
              number: 80
